fix: add security decorator for syncing openapi specs with custom auth middleware
